# libstorage

./: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.ci  Makefile.repo  README.md  VERSION  autogen.sh  configure.ac  configure.in  libstorage.spec.in
bindings/: Makefile.am  storage.deps  storage.i
bindings/python/: .gitignore  LibStorage.i  Makefile  Makefile.am  Storage.i  enum_ref.i  example.py  graph.py  libstorage.i  probing.py  storage-python.i
bindings/python/examples/: Makefile.am  graph.py  output_test.py  probing.py
bindings/ruby/: .gitignore  Makefile.am  storage-ruby.i  storage.i  storage_utf8.rb
bindings/ruby/examples/: Makefile.am  human.rb  output_test.rb  probing.rb
bindings/ycp/: LibStorage.i  Makefile.am  callback.ycp  example.ycp
data/: Makefile.am  sysconfig.storage  sysconfig.storage-libstorage
doc/: Makefile.am  blocked-features-and-bugs.md  libstorage_overview.html  status-current-code.md  yast-storage-requirements.md
doc/autodocs/: .cvsignore  .gitignore  Makefile.am  doxygen.conf
examples/: .cvsignore  .gitignore  Makefile.am  Makefile.example  SaveGraph.cc  ShowBytes.cc  TestDisk.cc  TestDiskLog.cc  TestEvms.cc  TestLock.cc  TestLogging.cc  TestLoop.cc  TestLvm.cc  TestLvmSnap.cc  TestLvmStripe.cc  TestLvmThin.cc  TestMd.cc  TestProbing.cc  TestStorage.cc  TestSystemInfo.cc
examples/SystemInfo/: .gitignore  Makefile.am  test-blkid.cc  test-cmdbtrfssubvolumes.cc  test-lsattr.cc  test-majorminor.cc  test-mdlinks.cc  test-parted.cc  test-procmounts.cc  test-procparts.cc  test-udevmap.cc
package/: libstorage.changes
po/: Makefile.am  README  af.po  ar.po  be.po  bg.po  bn.po  bs.po  ca.po  create-pot  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  km.po  ko.po  ku.po  libstorage.pot  lo.po  lt.po  (+28 more)
src/: .cvsignore  AppUtil.cc  AppUtil.h  AsciiFile.cc  AsciiFile.h  Container.cc  Container.h  Dasd.cc  Dasd.h  DerefIterator.h  Disk.cc  Disk.h  Dm.cc  Dm.h  DmCo.cc  DmCo.h  DmPart.cc  DmPart.h  DmPartCo.cc  DmPartCo.h  Dmmultipath.cc  Dmmultipath.h  DmmultipathCo.cc  DmmultipathCo.h  Dmraid.cc  Dmraid.h  DmraidCo.cc  DmraidCo.h  EtcFstab.cc  EtcFstab.h  EtcRaidtab.cc  EtcRaidtab.h  Evms.cc  Evms.h  EvmsAccess.cc  EvmsAccess.h  EvmsCo.cc  EvmsCo.h  EvmsHelper.cc  EvmsVol.cc  (+64 more)
storage/: .gitignore  AppUtil.cc  AppUtil.h  ArchInfo.cc  ArchInfo.h  AsciiFile.cc  AsciiFile.h  Blkid.cc  Blkid.h  Btrfs.cc  Btrfs.h  BtrfsCo.cc  BtrfsCo.h  Container.cc  Container.h  Dasd.cc  Dasd.h  Dasdview.cc  Dasdview.h  DerefIterator.h  Device.cc  Device.h  Disk.cc  Disk.h  Dm.cc  Dm.h  DmCo.cc  DmCo.h  DmPart.cc  DmPart.h  DmPartCo.cc  DmPartCo.h  Dmmultipath.cc  Dmmultipath.h  DmmultipathCo.cc  DmmultipathCo.h  Dmraid.cc  Dmraid.h  DmraidCo.cc  DmraidCo.h  (+89 more)
storage/SystemInfo/: Blkid.cc  Blkid.h  CmdBlkid.cc  CmdBlkid.h  CmdBtrfs.cc  CmdBtrfs.h  CmdCryptsetup.cc  CmdCryptsetup.h  CmdDasdview.cc  CmdDasdview.h  CmdDmraid.cc  CmdDmsetup.cc  CmdDmsetup.h  CmdLsattr.cc  CmdLsattr.h  CmdLsscsi.cc  CmdLsscsi.h  CmdLvm.cc  CmdLvm.h  CmdMultipath.cc  CmdParted.cc  CmdParted.h  Dasdview.cc  Dev.cc  Dev.h  DevAndSys.cc  DevAndSys.h  Lsscsi.cc  Lsscsi.h  Makefile.am  Parted.cc  ProcMdstat.cc  ProcMdstat.h  ProcMounts.cc  ProcMounts.h  ProcParts.cc  SystemInfo.cc  SystemInfo.h
storage/Utils/: AppUtil.cc  AppUtil.h  AsciiFile.cc  AsciiFile.h  Enum.h  Lock.h  Makefile.am  OutputProcessor.cc  OutputProcessor.h  Regex.cc  Regex.h  Region.h  StorageTmpl.h  SystemCmd.cc  SystemCmd.h  XmlFile.cc  XmlFile.h
testsuite/: .gitignore  Makefile.am  alt-names1.cc  alt-names2.cc  backupstate1.cc  blkid.cc  btrfs-show.cc  btrfs-subvolumes.cc  btrfs.cc  common.cc  common.h  contvolinfo1.cc  cryptsetup.cc  crypttab-add.cc  crypttab-remove.cc  dasdview.cc  disk_hda  disk_hda.clean  disk_hdb  disk_sda  disk_sdb.clean  disklabel1.cc  dmraid.cc  dmsetup-info.cc  dmsetup.cc  evms_create.cc  evms_extend.cc  format1.cc  freeinfo1.cc  fstab-add.cc  fstab-ng-add.cc  fstab-ng-find.cc  fstab-ng-remove.cc  fstab-ng-update.cc  fstab-remove.cc  fstab-update.cc  fstab1.cc  fstab2.cc  fstab3.cc  fstab4.cc  (+36 more)
testsuite-real/: .gitignore  Makefile.am  align1.cc  align2.cc  common.cc  common.h  create1.cc  create2.cc  format1.cc  format2.cc  lvmcreate1.cc  lvmcreate2.cc  lvmextend1.cc  lvmextend2.cc  lvmresize1.cc  mdcreate1.cc  resize1.cc  resize2.cc
testsuite/config/: Makefile.am  unix.exp
testsuite/data/: Makefile.am  disk_hda  disk_hda.info  disk_hdb.info  disk_sda  disk_sda.info  disk_sdb  disk_sdb.info  volume.info  volume_info
testsuite/data/empty/: Makefile.am  disk_sda.info
testsuite/data/scandium/: Makefile.am  arch.info  disk_sda.info
testsuite/data/thalassa/: Makefile.am  disk_sda  disk_sda.info  disk_sdb  disk_sdb.info  disk_sdc.info  free.info  lvmvg_system.info  volume_info
testsuite/helpers/: .gitignore  Makefile.am  retcode.cc
testsuite/lib/: Makefile.am  limal_init.exp
testsuite/libstorage.test/: Makefile.am  multi_test.exp  single_test.exp
testsuite/single.out/: Makefile.am  alt-names1.out  alt-names2.out  backupstate1.out  blkid.out  btrfs-subvolumes.out  btrfs.out  contvolinfo1.out  cryptsetup.out  crypttab-add.out  crypttab-remove.out  dasdview.out  disklabel1.out  dmraid.out  dmsetup-info.out  dmsetup.out  evms_create.out  evms_extend.out  format1.out  freeinfo1.out  fstab-add.out  fstab-ng-add.out  fstab-ng-find.out  fstab-ng-remove.out  fstab-ng-update.out  fstab-remove.out  fstab-update.out  fstab1.out  fstab2.out  fstab3.out  fstab4.out  humanstring1.out  humanstring2.out  lsattr.out  lsscsi.out  lvm_create.out  lvm_create2.out  lvm_extend.out  md-create.out  md_create.out  (+23 more)
