
AC_INIT(storage/StorageInterface.h)

VERSION=`cat ./VERSION`

AM_INIT_AUTOMAKE(libstorage, $VERSION)
AM_CONFIG_HEADER(config.h)

AC_DISABLE_STATIC

AC_PROG_CXX
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL
AM_PATH_PYTHON

AC_PREFIX_DEFAULT(/usr)

CFLAGS="${CFLAGS} -Wall -Wformat=2 -Wmissing-prototypes"
CXXFLAGS="${CXXFLAGS} -std=gnu++0x -DHAVE_CXX0X -Wall -Wformat=2 -Wnon-virtual-dtor"

docdir=\${prefix}/share/doc/packages/libstorage
fillupdir=/var/adm/fillup-templates

AC_SUBST(VERSION)
AC_SUBST(docdir)
AC_SUBST(fillupdir)

AC_OUTPUT(
	Makefile
	doc/Makefile
	doc/autodocs/Makefile
	storage/Makefile
	bindings/Makefile
	bindings/python/Makefile
	data/Makefile
	po/Makefile
	examples/Makefile
	testsuite/Makefile
	testsuite/lib/Makefile
	testsuite/config/Makefile
	testsuite/libstorage.test/Makefile
	testsuite/single.out/Makefile
	testsuite/data/Makefile
	testsuite/data/thalassa/Makefile
	testsuite/data/scandium/Makefile
	testsuite-real/Makefile
	package/libstorage.spec:libstorage.spec.in
)
