#
# Makefile.am for libstorage/doc/autodocs
#

htmldir = $(docdir)/libstorage/autodocs

#html_DATA = index.html $(wildcard *.html *.png) doxygen.css libstorage.tag
#CLEANFILES = $(html_DATA) doxygen.log doxygen.conf installdox

#doxygen.css @RPMNAME@.tag: index.html

#index.html: $(srcdir)/../../src/*.h
#	doxygen PROJECT_NAME=libstorage EXCLUDE_SYMLINKS=YES
