#
# Makefile.am for libstorage/examples/SystemInfo
#

INCLUDES = -I$(top_srcdir)

LDADD = ../../storage/libstorage.la

noinst_PROGRAMS = test-blkid test-majorminor test-mdlinks test-parted		\
	test-procmounts test-procparts test-udevmap

test_blkid_SOURCES = test-blkid.cc
test_majorminor_SOURCES = test-majorminor.cc
test_mdlinks_SOURCES = test-mdlinks.cc
test_parted_SOURCES = test-parted.cc
test_procmounts_SOURCES = test-procmounts.cc
test_procparts_SOURCES = test-procparts.cc
test_udevmap_SOURCES = test-udevmap.cc

