#
# Makefile.am for libstorage/storage/SystemInfo
#

noinst_LTLIBRARIES = libsysteminfo.la

libsysteminfo_la_SOURCES =				\
	SystemInfo.cc		SystemInfo.h		\
	Blkid.cc		Blkid.h			\
	Dasdview.cc		Dasdview.h		\
	Lsscsi.cc		Lsscsi.h		\
	Parted.cc		Parted.h		\
	ProcMdstat.cc		ProcMdstat.h		\
	ProcMounts.cc		ProcMounts.h		\
	ProcParts.cc		ProcParts.h

