#
# Makefile.am for libstorage/storage/SystemInfo
#

noinst_LTLIBRARIES = libsysteminfo.la

libsysteminfo_la_SOURCES =				\
	SystemInfo.cc		SystemInfo.h		\
	Blkid.cc		Blkid.h			\
	CmdBtrfs.cc		CmdBtrfs.h		\
	CmdCryptsetup.cc	CmdCryptsetup.h		\
	CmdDmraid.cc		CmdDmraid.h		\
	CmdDmsetup.cc		CmdDmsetup.h		\
	CmdLvm.cc		CmdLvm.h		\
	CmdMultipath.cc		CmdMultipath.h		\
	Dasdview.cc		Dasdview.h		\
	Lsscsi.cc		Lsscsi.h		\
	Parted.cc		Parted.h		\
	ProcMdstat.cc		ProcMdstat.h		\
	ProcMounts.cc		ProcMounts.h		\
	ProcParts.cc		ProcParts.h

