#
# Makefile.am for libstorage/storage/Utils
#

noinst_LTLIBRARIES = libutils.la

libutils_la_SOURCES =					\
	AppUtil.cc		AppUtil.h		\
	AsciiFile.cc		AsciiFile.h		\
	Enum.cc			Enum.h			\
	Lock.cc			Lock.h			\
	OutputProcessor.cc	OutputProcessor.h	\
	Regex.cc		Regex.h			\
	Region.cc		Region.h		\
	StorageTmpl.h					\
	SystemCmd.cc		SystemCmd.h		\
	XmlFile.cc		XmlFile.h

